<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListViewFooterView</string>
    <string name="hello_world">Hello world!</string>
    <string name="Player">选手</string>
    <string name="Events">所属赛事</string>
    <string name="Code">股票代码</string>
    <string name="Name">股票名称</string>
    <string name="Type">交易类型</string>
    <string name="Count">交易数量</string>
    <string name="TextLoadMore">点击加载更多</string>
    <string name="LoadingText">正在加载中...</string>

</resources>
